# banking-entity

./: .gitignore  CHANGELOG.md  LICENSE  README.md  banking-entity.cabal  default.nix  release.nix
app/: Main.hs
src/: Api.hs  Config.hs  Lib.hs  Models.hs
src/Api/: Account.hs  Account_flymake.hs  Operations.hs
test/: TransactionsSpec.hs  TransactionsTest.hs
