cabal-version:       2.4

name:                banking-entity
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Jonatan Borkowski
maintainer:          jonatan.borkowski@pm.me
homepage:            https://github.com/jborkowski/banking-entity#README.md
category:            Web
build-type:          Simple
extra-source-files:  CHANGELOG.md


common shared-properties
  default-language: Haskell2010
  build-depends:
              base >=4.7 && <5 
--            , protolude
            , aeson >= 1.2
            , servant
            , servant-server 
            , containers
            , lens
            , lens-aeson
            , mtl
            , stm
            , safe
            , text
            , transformers
            , http-api-data
            , wai
            , warp
            , monad-logger
  ghc-options:
              -Wall
              -Wcompat
              -Wincomplete-uni-patterns
              -Wredundant-constraints
              -Wnoncanonical-monad-instances
              -- -Werror
              -- -O2

library
  import: shared-properties
  exposed-modules:
              Lib
            , Config
            , Models
            , Api
            , Api.Account 
 --  build-depends:      protolude
  hs-source-dirs:     src

executable banking-entity
  import:             shared-properties
  main-is:            Main.hs
  build-depends:      banking-entity
  ghc-options:
    -- enable parallelism
    -threaded
    "-with-rtsopts=-N"
  hs-source-dirs: app

test-suite banking-entity-test
  import: shared-properties
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             MyLibTest.hs


